# py-doc-example

./: .gitignore  README.md  pyproject.toml
docs/source/: conf.py  index.rst  modules.rst  py_doc_example.rst
py_doc_example/: __init__.py  __main__.py  uff_module.py
